--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -20,5 +20,6 @@
     <input class="form-control" type="password" name="password" id="password">
   </div>
 
-  <input class="btn btn-default" type="submit">
+  <input class="btn btn-primary" type="submit">
+  
 </form>
