--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,52 @@
 </div>
 <br>
 <div class="container">
-    
+
     <a class="btn btn-info" href="/apparel/new">+ Add Apparel</a>
     <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
 
 </div>
+{{#each apparel}}
+<div class="row">
+    <div class="col-sm-6">
+        <img class="apparelImg" src={{imgLink}}>
+        <div class="col-sm-8">
+            <div class="row">
+                <div>
+                    <h4>
+                        <a href='/apparel/{{_id}}'>{{name}}</a>
+                    </h4>
+                    ${{listPrice}} {{#if ../currentUser}}
+                    <span>Bought for: ${{boughtPrice}}
+                        {{/if}}
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col">
+                    {{notes}}
+                </div>
+            </div>
+        </div>
+        {{/each}}
+        {{#each accessory}}
+        <div class="row">
+            <div class="col-sm-6">
+                <img class="apparelImg" src={{imgLink}}>
+                <div class="col-sm-8">
+                    <div class="row">
+                        <div >
+                            <h4>
+                                <a href='/accessory/{{id}}'>{{name}}</a>
+                            </h4>
+                            ${{listPrice}}
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            {{notes}}
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
