--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,16 @@
 .apparelImg {
     width: 100%;
+    max-width: 400px;
+    max-height: 400px;
     border-radius: 4px;
+}
+
+.login {
+    margin-left: 85%;
+    margin-right: 10%;
+    float: right;
+}
+
+h1 {
+    margin: 0;
 }
