Added purchase date, fixed accessory/new route

--- a/views/apparel/new.hbs
+++ b/views/apparel/new.hbs
@@ -17,6 +17,9 @@
     <label for="imgLink">Image Link</label>
     <input type="text" name="imgLink" id="imgLink" placeholder="image link">
     <br>
+    <label for="boughtDate">Purchase Date</label>
+    <input type="date" name="boughtDate" id="imgLink" placeholder="Purchase date">
+    <br>
     <label for="notes">notes</label>
     <textarea name="notes" id="notes" cols="30" rows="6" placeholder="notes"></textarea>
     <br>
