--- a/public/styles.css
+++ b/public/styles.css
@@ -3,10 +3,11 @@
     max-width: 400px;
     max-height: 400px;
     border-radius: 4px;
+    margin: 4px;
 }
 
 .login {
-    margin-left: 85%;
+    margin-left: 90%;
     margin-right: 10%;
     float: right;
 }
@@ -22,3 +23,12 @@ h1 {
 body {
     background: #EAEEF7;
 }
+
+.myrow {
+    display: flex;
+  }
+  
+.mycolumn {
+    flex: 33.33%;
+    padding: 5px;
+  }
