--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -7,18 +7,13 @@
 <br>
 {{#each apparel}}
 <div class="row">
-        <div class="col-sm-6">
-            <img class="apparelImg" src = {{imgLink}}>
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
                         <h4>
                             <a href='/apparel/{{_id}}'>{{name}}</a>
                         </h4>
-                        ${{listPrice}} - (Bought:{{boughtPrice}})
-                    </div>
-                    <div class="col-sm-6">
-                        
+                        (Bought: ${{boughtPrice}}) - (Sold: ${{listPrice}})
                     </div>
                 </div>
                 <div class="row">
@@ -27,22 +22,18 @@
                     </div>
         </div>
     </div>
+    </div>
     <br>
 {{/each}}
 {{#each accessory}}
     <div class="row">
-        <div class="col-sm-6">
-            <img class="apparelImg" src = {{imgLink}}>
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-6">
                         <h4>
                             <a href='/accessory/{{id}}'>{{name}}</a>
                         </h4>
-                        ${{listPrice}}
-                    </div>
-                    <div class="col-sm-6">
-                        
+                        (Bought: ${{boughtPrice}}) - (Sold: ${{listPrice}})
                     </div>
                 </div>
                 <div class="row">
@@ -50,6 +41,7 @@
                         {{notes}}
                     </div>
         </div>
+    </div>
     </div>
     <br>
 {{/each}}
