--- a/views/apparel/show.hbs
+++ b/views/apparel/show.hbs
@@ -3,11 +3,16 @@
 <img class="apparelImg" src='{{apparel.imgLink}}'>
 </div>
 <div class="container">
+    {{#if currentUser}}
 <a class="btn btn-primary" href="/apparel/{{apparel._id}}/edit">
     Edit
 </a>
-
+<form class="isSold" action="/apparel/{{apparel.id}}?_method=PUT" method="POST">
+    <input type="checkbox" name="isSold" value="true">
+    <input class="btn btn-success" type="submit" value="Mark as Sold">
+</form>
 <form class="delete-form" action="/apparel/{{apparel.id}}?_method=DELETE" method="POST">
     <input class="action-btn btn btn-danger" type="submit" value="DELETE">
 </form>
+{{/if}}
 </div>
