--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        {{notes}}
+                        Notes: {{notes}}
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                {{notes}}
+                                Notes: {{notes}}
                             </div>
                         </div>
                     </div>
