Hid add buttons from non admin view

--- a/views/apparel/index.hbs
+++ b/views/apparel/index.hbs
@@ -1,6 +1,8 @@
+{{#if currentUser}}
 <div>
     <a class="btn btn-info" href="/apparel/new">+ Add Apparel</a>
 </div>
+{{/if}}
 {{#each apparel}}
     <div class="row">
         <div class="col-sm-8">
