--- a/views/accessory/index.hbs
+++ b/views/accessory/index.hbs
@@ -1,6 +1,8 @@
+{{#if currentUser}}
 <div>
     <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
 </div>
+{{/if}}
 {{#each accessory}}
     <div class="row">
         <div class="col-sm-8">
