Surely it has to work this time

--- a/views/apparel/index.hbs
+++ b/views/apparel/index.hbs
@@ -3,6 +3,7 @@
     <a class="btn btn-info" href="/apparel/new">+ Add Apparel</a>
     {{/if}}
 </div>
+<div>
 {{#each apparel}}
     <div class="row">
         <div class="col-sm-8">
@@ -23,3 +24,4 @@
         </div>
     </div>
 {{/each}}
+</div>
