--- a/views/accessory/index.hbs
+++ b/views/accessory/index.hbs
@@ -4,7 +4,7 @@
     <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
     {{/if}}
 </div>
-
+<div>
 {{#each accessory}}
     <div class="row">
         <div class="col-sm-8">
@@ -28,3 +28,4 @@
         </div>
     </div>
 {{/each}}
+</div>
