--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
                     <a class="btn btn-primary" href="/logout">Logout {{currentUser.local.name}}</a>
                     {{else}}
                     <a class="btn btn-primary" href="/login">Login</a>
-                    {{!-- <li><a href="/signup">Signup</a></li> --}}
+                    <a class="btn btn-primary" href="/admin">Admin</a>
                     {{/if}}
                 </ul>
             {{#if currentUser}}
