--- a/views/accessory/index.hbs
+++ b/views/accessory/index.hbs
@@ -1,5 +1,7 @@
 <div>
+    {{#if currentUser}}
     <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
+    {{/if}}
 </div>
 <div>
 {{#each accessory}}
