Changed to a while

--- a/views/accessory/index.hbs
+++ b/views/accessory/index.hbs
@@ -1,7 +1,7 @@
 <div>
-    {{#if currentUser}}
+    {{#while currentUser}}
     <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
-    {{/if}}
+    {{/while}}
 </div>
 <div>
 {{#each accessory}}
