Removing the button broke it the same way

--- a/views/apparel/index.hbs
+++ b/views/apparel/index.hbs
@@ -1,4 +1,7 @@
 <div>
+    <a class="btn btn-info" href="/apparel/new">+ Add Apparel</a>
+</div>
+<div>
 {{#each apparel}}
     <div class="row">
         <div class="col-sm-8">
