--- a/views/accessory/index.hbs
+++ b/views/accessory/index.hbs
@@ -1,4 +1,8 @@
 <div>
+
+    <a class="btn btn-info" href="/accessory/new">+ Add Accessory</a>
+</div>
+<div>
 {{#each accessory}}
     <div class="row">
         <div class="col-sm-8">
